# SouiEditor

./: Adapter.cpp  Build.bat  CMakeLists.txt  DesignerView.cpp  DesignerView.h  MainDlg.cpp  MainDlg.h  ResManger.cpp  ResManger.h  SDesignerRoot.cpp  SDesignerRoot.h  SImgCanvas.cpp  SImgCanvas.h  SMoveWnd.cpp  ScintillaWnd.cpp  ScintillaWnd.h  SouiEditor.cpp  SouiEditor.pro  SouiEditorApp.cpp  SouiEditorApp.h  pugixml_write.cpp  readme.md  souieditor.vcproj  stdafx.h
Config/: Ctrl.xml  SkinProperty.xml
Dialog/: DlgNewSkin.cpp  DlgNewSkin.h  DlgSkinSelect.cpp  DlgSkinSelect.h
propgrid/propitem/: SPropertyItem-Option.cpp
res/: resource.h  soui_res.rc2
uires/: uires.idx
uires/xml/: dlg_about.xml  dlg_main.xml
